add Vector API example